styles.css
*,
*::before,
*::after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  transition: all ease-in-out 300ms;
}
img {
  max-width: 100%;
  height: auto;
  display: block;
  width: 100%;
}
html {
  font-size: 62.5%;
  overflow-x: hidden;
}

.container {
  position: relative;
}
.hero a:hover {
  background-color: #00ff6c;
  color: #000;
}
.cta a:hover {
  background-color: #000;
  color: #00ff6c;
}
.logo {
  width: 10rem;
  height: auto;
}

nav ul {
  display: flex;
  justify-content: space-around;
  list-style-type: none;
}
a {
  text-decoration: none;
  color: #fff;
}
nav a {
  font-size: 2rem;
}
header {
  position: absolute;
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
}
.hero {
  background-image: url('img/hero-bg.jpg');
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  height: 70vh;

  /* position: relative; */
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  text-align: center;
}
.primary-heading {
  font-size: 3rem;
  margin-bottom: 4rem;

  line-height: 1.5;
  color: #fff;
  span {
    display: block;
    font-size: 0.9em;
    font-weight: 400;
  }
}

.btn {
  padding: 1rem 1.5rem;
  /* background-color: green; */
  font-size: 2rem;
  border: 2px solid #00ff6c;
  color: #00ff6c;
}

.main-nav {
  display: none;
}
.menu {
  color: #fff;
  width: 5rem;
  height: 5rem;
  /* background-color: red; */
  font-size: 2rem;
}

/* section about */

.about {
  background-color: #000;
  color: #fff;
  text-align: center;
  padding: 4rem 3rem;
  outline: 2px solid #00ff6c;
  outline-offset: -2rem;
}
.about h3 {
  font-size: 3.5rem;
  position: absolute;
  left: 50%;
  transform: translateX(-50%);
  top: -6rem;
  background-color: #000;
  /* padding: 0 .3rem; */
  color: #00ff6c;
}

.about p {
  font-size: 2rem;
}
.about p:first-of-type {
  margin: 2rem 0;
}
@media (max-width: 26rem) {
  .about h3 {
    font-size: 2.3rem;
    top: -5.5rem;
  }
  .about p {
    font-size: 1.5rem;
  }
}
/* section work */

.work h2 {
  font-size: 4rem;
  font-weight: 400;
  text-align: center;
  margin: 4rem 0;
}
.project {
  position: relative;
}
.project-desc {
  position: absolute;
  background-color: #fff;
  width: 100%;
  /* height: 50px; */
  color: #fff;
  top: 60%;
  bottom: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  background-color: rgba(0, 0, 0, 0.6);
  p {
    font-size: 2.5rem;
    margin-bottom: 2rem;
  }
  a {
    font-size: 1.5rem;
    font-weight: 800;
    color: #00ff6c;
    padding: 1rem 2rem;
    border: 1px solid #00ff6c;
  }
}

/* section cta */
.cta {
  background-color: #00ff6c;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  padding: 4rem 5rem;
  text-align: center;
}
.cta h2 {
  font-size: 2.5rem;
  span {
    display: block;
    font-weight: 300;
  }
}
.cta a {
  color: #000;
  border: 1px solid #000;
  display: inline-block;
  margin-top: 3rem;
}

footer {
  background-color: #000;
  padding-top: 10rem;
  color: #fff;
  p {
    font-size: 2rem;
    margin-bottom: 2rem;
    grid-column: 1/-1;
    padding: 0 2rem;
  }
}
.footer-nav {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  font-size: 2rem;

  ul {
    list-style-type: none;
    justify-self: center;
  }
}
@media (min-width: 26rem) {
  .primary-heading {
    font-size: 4rem;
  }
}
@media (min-width: 50rem) {
  .portfolio {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
  }
}
@media (min-width: 61.25rem) {
  .logo{
    width: 15rem;
  }
  .hero {
    height: 100vh;
  }
  .primary-heading {
    font-size: 5rem;
  }
  .portfolio {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    overflow: hidden;
  }
  .project-desc {
    transform: translateY(100%);
  }
  .project:hover {
    .project-desc {
      transform: translateY(0%);
    }
  }
  .menu {
    display: none;
  }
  .main-nav {
    display: block;
  }
  .main-nav-list {
    display: flex;
    width: 50vw;
    justify-content: space-between;
    align-items: center;

    li {
      position: relative;
    }
    a {
      padding: 1rem;
    }
    a::before {
      position: absolute;
      bottom: -10px;
      display: block;
      content: '';
      width: 0;
      height: 5px;
      background-color: #00ff6c;
      transition: all ease-in-out 500ms;
    }

    a:hover::before {
      width: 100%;
    }
  }
  .about {
    background-image: url('img/who-we-are.jpg');
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    /* padding: -10rem; */
    max-width: 90%;
    width: 1000px;
    margin: 0 auto;
    height: 400px;
    position: relative;
  }
  .about {
    outline: none;
  }
  .about .container {
    position: absolute;
    width: 30vw;
    top: -5rem;
    /* right: 70vw; */
    background-color: #000;
    outline: 2px solid #00ff6c;
    outline-offset: -20px;
    padding: 5rem;
    h3 {
      top: 0;
    }
  }
}

@media (min-width: 56.25rem) and (max-width: 74.5rem) {
  .about h3 {
    font-size: 2.5rem;
  }
  .about .container {
    padding: 3rem;
  }
}

